--- a/package.json
+++ b/package.json
@@ -5,14 +5,10 @@
   "scripts": {
     "start": "node ./bin/www"
   },
-
-  "engines":{
-    "node":"4.2.x",
-    "npm":"2.14.x"
+  "engines": {
+    "node": "4.2.x",
+    "npm": "2.14.x"
   },
-
-
-
   "dependencies": {
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
@@ -21,6 +17,8 @@
     "express": "~4.13.1",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0",
-    "express-partials": "~0.3.0"
+    "express-partials": "~0.3.0",
+    "sequelize": "~3.19.3",
+    "sqlite3": "~3.1.1"
   }
 }
