--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
     "start": "node ./bin/www",
     "migrate_local": "./node_modules/.bin/sequelize db:migrate --url sqlite://$(pwd)/quiz.sqlite",
     "seed_local": "./node_modules/.bin/sequelize db:seed:all --url sqlite://$(pwd)/quiz.sqlite",
-
     "migrate_heroku": "heroku run ./node_modules/.bin/sequelize db:migrate --url \\$DATABASE_URL",
     "seed_heroku": "heroku run ./node_modules/.bin/sequelize db:seed:all --url \\$DATABASE_URL",
-    "reset_heroku": "heroku pg:reset DATABSE"
+    "reset_heroku": "heroku pg:reset DATABASE"
   },
   "engines": {
     "node": "4.2.x",
@@ -31,7 +30,9 @@
     "express-session": "~1.13.0",
     "express-flash": "0.0.2",
     "method-override": "~2.3.5",
-    "sequelize-cli": "~2.3.1"
+    "sequelize-cli": "~2.3.1",
+    "cloudinary": "~1.3.1",
+    "multer": "~1.1.0"
   },
   "devDependencies": {
     "sqlite3": "^3.1.1"
